// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBarNav should automatically enable the inherit color state if the parent app bar enables the inheritColor prop 1`] = `
<div>
  <header
    class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--normal"
  >
    <button
      class="rmd-button rmd-button--icon rmd-app-bar__nav rmd-app-bar__nav--inherit"
      type="button"
    >
      <span
        class="rmd-ripple-container"
      />
    </button>
  </header>
</div>
`;

exports[`AppBarNav should automatically enable the inherit color state if the parent app bar enables the inheritColor prop 2`] = `
<div>
  <header
    class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--normal"
  >
    <button
      class="rmd-button rmd-button--icon rmd-app-bar__nav"
      type="button"
    >
      <span
        class="rmd-ripple-container"
      />
    </button>
  </header>
</div>
`;

exports[`AppBarNav should automatically enable the inherit color state if the parent app bar enables the inheritColor prop 3`] = `
<div>
  <header
    class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--normal"
  >
    <button
      class="rmd-button rmd-button--icon rmd-app-bar__nav rmd-app-bar__nav--inherit"
      type="button"
    >
      <span
        class="rmd-ripple-container"
      />
    </button>
  </header>
</div>
`;

exports[`AppBarNav should render correctly (with snapshots) 1`] = `
<div>
  <button
    class="rmd-button rmd-button--icon rmd-app-bar__nav"
    type="button"
  >
    <span
      class="rmd-ripple-container"
    />
  </button>
</div>
`;

exports[`AppBarNav should render correctly (with snapshots) 2`] = `
<div>
  <button
    class="rmd-button rmd-button--icon rmd-app-bar__nav"
    id="app-bar-nav"
    type="button"
  >
    <i
      class="material-icons"
    >
      menu
    </i>
    <span
      class="rmd-ripple-container"
    />
  </button>
</div>
`;
